--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -116,40 +116,41 @@
     }
 </style>
 
-<div id="produto" class="container">
+<div id="produto" class="container-fluid px-4">
+
     <h2 class="text-center fw-bold mb-5">Produtos</h2>
 
-    <div id="cardsContainer" class="d-flex justify-content-center flex-wrap gap-4">
-        <div class="card mx-auto card-container" style="width: 18rem;">
+    <div id="cardsContainer" class="d-flex justify-content-center flex-wrap gap-2">
+        <div class="card card-container flex-grow-1" style="max-width: 15rem;">
             <img src="empada.jpg" class="card-img-top" alt="Empadas">
-            <div class="card-body d-flex flex-column justify-content-between flex-grow-1">
+            <div class="card-body d-flex flex-column justify-content-between ">
                 <h5 class="card-title">Empadas</h5>
                 <p class="card-text">Deliciosas empadas por R$4,00</p>
                 <a href="https://wa.me/71985385330?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido%20na%20Let%26cia" target="_blank"  class="btn btn-custom mt-auto">Comprar</a>
             </div>
         </div>
 
-        <div class="card mx-auto card-container" style="width: 18rem;">
+        <div class="card card-container flex-grow-1" style="max-width: 15rem;">
             <img src="bolo de churros.jpg" class="card-img-top" alt="Bolo de Churros">
-            <div class="card-body d-flex flex-column justify-content-between flex-grow-1">
+            <div class="card-body d-flex flex-column justify-content-between ">
                 <h5 class="card-title">Bolo de churros</h5>
                 <p class="card-text">Bolinhos com sabor de infância! Por apenas R$5,00</p>
                 <a href="https://wa.me/71985385330?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido%20na%20Let%26cia" target="_blank"  class="btn btn-custom mt-auto">Comprar</a>
             </div>
         </div>
 
-        <div class="card mx-auto card-container" style="width: 18rem;">
+        <div class="card card-container flex-grow-1" style="max-width: 15rem;">
             <img src="bolo paçoca.jpg" class="card-img-top" alt="Bolo de Paçoca">
-            <div class="card-body d-flex flex-column justify-content-between flex-grow-1">
+            <div class="card-body d-flex flex-column justify-content-between ">
                 <h5 class="card-title">Bolo de paçoca</h5>
                 <p class="card-text">Feito por encomenda, a partir de R$50,00</p>
                 <a href="https://wa.me/71985385330?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido%20na%20Let%26cia" target="_blank"  class="btn btn-custom mt-auto">Comprar</a>
             </div>
         </div>
 
-        <div class="card mx-auto card-container" style="width: 18rem;">
+        <div class="card card-container flex-grow-1" style="max-width: 15rem;">
             <img src="queijadinha.jpg" class="card-img-top" alt="Queijadinha">
-            <div class="card-body d-flex flex-column justify-content-between flex-grow-1">
+            <div class="card-body d-flex flex-column justify-content-between ">
                 <h5 class="card-title">Queijadinha</h5>
                 <p class="card-text">Aquele gostinho de casa de vó, por apenas R$4,00.</p>
                 <a href="https://wa.me/71985385330?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido%20na%20Let%26cia" target="_blank"  class="btn btn-custom mt-auto">Comprar</a>
@@ -190,7 +191,7 @@
                 <p class="m-0">Let&cia.com © Todos os direitos reservados.</p>
                 <p id="contato" class="m-0">
                     Contato:
-                    <a href="https://wa.me/71985385330?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido%20na%20Let%26cia" target="_blank" rel="noopener noreferrer">
+                    <a href="https://wa.me/71985385330?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido%20na%20Let%26cia" target="_blank" >
                         clique aqui e fale conosco no WhatsApp
                     </a>
                 </p>
